# foem

./: .gitignore  README.md  main.py  pyproject.toml  run_with_progress.py  sample.env  sql_test.py  template.py  validator.py
dataset/: F0001.sql  F0001.txt  F0002.sql  F0002.txt  F0003.sql  F0003.txt  F0004.sql  F0004.txt  F0005.sql  F0005.txt  F0006.sql  F0006.txt  F0007.sql  F0007.txt  F0008.sql  F0008.txt  F0009.sql  F0009.txt  F0010.sql  F0010.txt  F0011.sql  F0011.txt  F0012.sql  F0012.txt  F0013.sql  F0013.txt  F0014.sql  F0014.txt  F0015.sql  F0015.txt  F0016.sql  F0016.txt  F0017.sql  F0017.txt  F0018.sql  F0018.txt  F0019.sql  F0019.txt  F0020.sql  F0020.txt  (+72 more)
old_files/: template_old.py  validator_old.py
query/: Q0001.sql  Q0002.sql  Q0003.sql  Q0004.sql  Q0005.sql  Q0006.sql  Q0007.sql  Q0008.sql  Q0009.sql  Q0010.sql  Q0011.sql  Q0012.sql  Q0013.sql  Q0014.sql  Q0015.sql  Q0016.sql  Q0017.sql  Q0018.sql  Q0019.sql  Q0020.sql  Q0021.sql  Q0022.sql  Q0023.sql  Q0024.sql  Q0025.sql  Q0026.sql  Q0027.sql  Q0028.sql  Q0029.sql  Q0030.sql  Q0031.sql  Q0032.sql  Q0033.sql  Q0034.sql  Q0035.sql  Q0036.sql  Q0037.sql  Q0038.sql  Q0039.sql  Q0040.sql
scratch/: expanded.py  test.py
script/: compare_results_llm.py  csv_export.py  exec_accuracy.py  langfuse_load_data.py
template/: F0003.sql  F0004.sql  F0005.sql  F0007.sql  F0008.sql  F0009.sql  F0011.sql  F0012.sql  F0015.sql  F0016.sql  F0017.sql  F0018.sql  F0019.sql  F0021.sql  F0023.sql  F0025.sql  F0026.sql  F0027.sql  F0028.sql  F0029.sql  F0031.sql  F0032.sql  F0033.sql  F0037.sql  F0038.sql  F0040.sql  (+8 more)
(+4 files in other folders)
