[project]
name = "foem"
version = "0.1.0"
description = "FastOMOP Evaluation and Monitoring - A Python toolkit for evaluating OMOP databases"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
dependencies = [
    "psycopg2-binary",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foem"]
